--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-i just got one more request, with this code, when i click in hotels for example or transport, the color of the selected pestaña doesnt change. it looks as if cars is still selected. <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
